--- a/index.html
+++ b/index.html
@@ -115,39 +115,40 @@
   
    
    
-    <footer class="bottom-sec">
-        <div class="bottom-content">
-            <div class="content-left">
-                <div class="subcontent">
-                    <h2>Contact Us <div class="underline1"><span></span></div>
-                    </h2>
-                    <i class="fas fa-phone-alt"></i>
-                   <b> <p class="mobile-no"> +91 9339233880<br>
-                    +91 9938742559</p></b>
-                    <i class="far fa-envelope"></i>
-                   <b> <p class="email-id">thematrixclub2021@gmail.com</p></b>
-                </div>
+   <footer class="bottom-sec">
+    <div class="bottom-content">
+        <div class="content-left">
+            <div class="subcontent">
+                <h2>Contact Us <div class="underline1"><span></span></div>
+                </h2>
+                <i class="fas fa-phone-alt"></i>
+                
+              </p></b>
+                <b> <p class="mobile-no"> +91 9339233880<br> 
+                  +91 9938742559 <i class="far fa-envelope"></i>
+               <b> <p class="email-id">thematrixclub2021@gmail.com</p></b>
             </div>
-            <div class="content-right">
-                <div class="subcontent">
-                    <h2>Newsletter<div class="underline1"><span></span></div></h2>
-                    <p>Subscribe to our newsletter and stay updated.</p>
-                    <input type="email" placeholder="Your Email">
-                    <button class="subscribe-btn">Subscribe</button>
-                </div>
-                <div class="subcontent">
-                    <h2>Follow Us<div class="underline1"><span></span></div></h2>
-                    <a href="https://bit.ly/3qUQmT1"><i class="fab fa-facebook" id="facebook"></i></a>
-                    <a href="https://bit.ly/3tVtMf6"><i class="fab fa-instagram" id="instagram"></i></a>
-                    <a href="https://bit.ly/3qTJEwu"> <i class="fab fa-linkedin" id="linkedin"></i></a>
-                    <a href="https://bit.ly/3ILFb5d"><i class="fab fa-twitter" id="twitter"></i></a>
-                    <a href="#"><i class="fab fa-telegram" id="telegram"></i></a>
-                </div>
-            </div>
-            <div class="copyright"><b><p>The Matrix Club &copy; 2022-All Rights Resevered</p></b> </div>
         </div>
-    </footer>
-    <script src="https://kit.fontawesome.com/0b579dad75.js" crossorigin="anonymous"></script>
+        <div class="content-right">
+            <div class="subcontent">
+                <h2>Newsletter<div class="underline1"><span></span></div></h2>
+                <p>Subscribe to our newsletter and stay updated.</p>
+                <input type="email" placeholder="Your Email">
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <div class="subcontent">
+                <h2>Follow Us<div class="underline1"><span></span></div></h2>
+                <a href="https://bit.ly/3qUQmT1"><i class="fab fa-facebook" id="facebook"></i></a>
+                <a href="https://bit.ly/3tVtMf6"><i class="fab fa-instagram" id="instagram"></i></a>
+                <a href="https://bit.ly/3qTJEwu"> <i class="fab fa-linkedin" id="linkedin"></i></a>
+                <a href="https://bit.ly/3ILFb5d"><i class="fab fa-twitter" id="twitter"></i></a>
+                <a href="#"><i class="fab fa-telegram" id="telegram"></i></a>
+            </div>
+        </div>
+        <div class="copyright"><b><p>The Matrix Club &copy; 2022-All Rights Resevered</p></b> </div>
+    </div>
+</footer>
+<script src="https://kit.fontawesome.com/0b579dad75.js" crossorigin="anonymous"></script>
         <!-- Swiper JS -->
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
